@@ -181,6 +181,7 @@ protected:
   HANDLE AllocFileContext();
   void FreeFileContext(HANDLE hFile);
   isofile* GetFileContext(HANDLE hFile);
+  bool IsRockRidge(struct iso9660_Directory& isodir);
   struct iso_dirtree* m_dirtree;
   struct iso9660info m_info;
   CIoSupport m_IoSupport;
